Minor vertical spacing fix for the board's toolbar

--- a/src/css/pages/board.scss
+++ b/src/css/pages/board.scss
@@ -33,7 +33,7 @@ $gutter: grid-gutter("sm");
 			.board [role="tab"]:before {
 				content: "●";
 				display: block;
-				line-height: 1;
+				line-height: 1.75;
 			}
 
 			.board [role="tab"]:hover,
